# fastpack

./: .gitignore  BUILD.md  FastPack-presentation.pptx  QUICKSTART.md  README.md  benchmark.bat  benchmark.sh  build.bat  build.sh  fastpack-presentation.md  fastpack.json  generate_ppt.py  package.json  test-demo.sh
examples/conan_project/: CMakeLists.txt  conanfile.txt
examples/conan_project/src/: main.cpp
examples/cpp_project/: CMakeLists.txt  build.sh
examples/cpp_project/src/: main.cpp
examples/qmake_project/: QMakeExample.pro
examples/qmake_project/src/: main.cpp
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_icons.py
src-tauri/src/: compiler.rs  main.rs  packager.rs  types.rs
templates/: installer.bat  installer.sh
