[package]
name = "fastpack"
version = "1.0.0"
edition = "2021"
description = "Ultra-fast cross-platform package builder with GUI"
authors = ["FastPack Team"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
zstd = "0.13"
rayon = "1.8"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
crossbeam-channel = "0.5"
num_cpus = "1.16"
glob = "0.3"
base64 = "0.21"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
